Mise en place de la partie design de login et signup et correction des problèmes d'overflow

--- a/src/renderer/src/assets/css/base.css
+++ b/src/renderer/src/assets/css/base.css
@@ -26,7 +26,6 @@
 }
 
 body {
-    display: flex;
 	min-height: 100vh;
 	font-size: 14px;
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
